<resources>
	<string name="banner_ad_unit_id">ca-app-pub-5149759708329031/3033804100</string>
    <string name="app_name">Ultimate To-Do List</string>
    <string name="Please_choose_sync_option">What type of account would you like to link to?</string>
    <string name="deleted">&lt;Deleted Item&gt;</string>
    <string name="MultChoiceViewRule1">Account is</string>
    <string name="MultChoiceViewRule2">Account is one of:</string>
    <string name="MultChoiceViewRule3">Folder is</string>
    <string name="MultChoiceViewRule4">Folder is one of:</string>
    <string name="MultChoiceViewRule5">Context is</string>
    <string name="MultChoiceViewRule6">Context is one of:</string>
    <string name="MultChoiceViewRule7">Goal is</string>
    <string name="MultChoiceViewRule8">Goal is one of:</string>
    <string name="MultChoiceViewRule9">Status is</string>
    <string name="MultChoiceViewRule10">Status is one of:</string>
    <string name="MultChoiceViewRule11">Priority is</string>
    <string name="MultChoiceViewRule12">Priority is one of:</string>
    <string name="MultChoiceViewRule13">Parent task is</string>
	<string name="MultStringsViewRule1">Tags include</string>
	<string name="MultStringsViewRule2">Tags include one of:</string>
	<string name="IntViewRule1">Expected length</string>
	<string name="IntViewRule2">Time recorded</string>
	<string name="IntViewRule3">Timer is running</string>
	<string name="IntViewRule4">Timer is not running</string>
	<string name="isLessThan">is less than</string>
	<string name="isLessThanOrEqualTo">is less than or equal to</string>
	<string name="isEqualTo">is equal to</string>
	<string name="isNotEqualTo">is not equal to</string>
	<string name="isGreaterThanOrEqualTo">is greater than or equal to</string>
	<string name="isGreaterThan">is greater than</string>
	<string name="minutes">minutes</string>
	<string name="minutes_abbreviation">min</string>
	<string name="Sunday">Sun</string>
	<string name="Monday">Mon</string>
	<string name="Tuesday">Tue</string>
	<string name="Wednesday">Wed</string>
	<string name="Thursday">Thu</string>
	<string name="Friday">Fri</string>
	<string name="Saturday">Sat</string>
	<string name="StartDate">Start Date</string>
	<string name="CompletionDate">Completion Date</string>
	<string name="Modification_Date">Modification Date</string>
	<string name="DueDate">Due Date</string>
	<string name="OnOrBefore">is on or before</string>
	<string name="OnOrAfter">is on or after</string>
	<string name="Is">is</string>
	<string name="DaysInFuture">days in the future</string>
	<string name="DaysInPast">days in the past</string>
	<string name="Today">today</string>
	<string name="getAccountName">Enter a name for the account:</string>
	<string name="getAccountName2">For example: \"John\'s Account\", or \"Jane\'s To-Do List\"</string>
	<string name="done">Done</string>
	<string name="DbInsertFailed">Database insert failed</string>
	<string name="DbModifyFailed">Database modification failed</string>
	<string name="AllTasks">All Tasks</string>
	<string name="Hotlist">Hotlist</string>
	<string name="MyViews">My Views</string>
	<string name="Notes">Notes</string>
	<string name="DueTodayTomorrow">Due Today/Tomorrow</string>
	<string name="Overdue">Overdue</string>
	<string name="Starred">Starred</string>
	<string name="ByStatus">By Status</string>
	<string name="Folders">Folders</string>
	<string name="Contexts">Contexts</string>
	<string name="Tags">Tags</string>
	<string name="Goals">Goals</string>
	<string name="RecentlyCompleted">Recently Completed</string>
	<string name="New_Task">New Task</string>
	<string name="New_Note">New Note</string>
	<string name="Add_a_Task">Add a Task</string>
	<string name="Edit_Task">Edit Task</string>
	<string name="Title">Title</string>
	<string name="Status">Status</string>
	<string name="Start_Date">Start Date</string>
	<string name="Due_Date">Due Date</string>
	<string name="Reminder_Date_Time">Reminder Date/Time</string>
	<string name="Reminder">Reminder</string>
	<string name="Repeat">Repeat</string>
	<string name="Priority">Priority</string>
	<string name="Folder">Folder</string>
	<string name="Context">Context</string>
	<string name="Goal">Goal</string>
	<string name="Accounts">Accounts</string>
	<string name="Account">Account</string>
	<string name="Note">Note</string>
	<string name="Save">Save</string>
	<string name="Cancel">Cancel</string>
	<string name="None">&lt;None&gt;</string>
	<string name="None_No_Symbols">None</string>
	<string name="Add_Folder">Add Folder...</string>
	<string name="Add_Context">Add Context...</string>
	<string name="Add_Goal">Add Goal...</string>
	<string name="Select_a_Start_Date">Select a Start Date</string>
	<string name="Select_a_Due_Date">Select a Due Date</string>
	<string name="Select_a_Reminder_Date">Select a Reminder Date</string>
	<string name="Select_a_Date">Select a Date</string>
	<string name="Task_is">Task is...</string>
	<string name="Advanced_Repeat_Pattern">Advanced Repeat Pattern</string>
	<string name="Please_enter_a_name">Please enter a name.</string>
	<string name="This_is_not_properly_formatted">This is not properly formatted.</string>
	<string name="Add_a_Folder">Add a Folder</string>
	<string name="Enter_Folder_Name">Enter Folder Name:</string>
	<string name="Add_a_Context">Add a Context</string>
	<string name="Enter_Context_Name">Enter Context Name:</string>
	<string name="Add_a_Goal">Add a Goal</string>
	<string name="Enter_Goal_Name">Enter Goal Name:</string>
	<string name="tag_description">A tag is a keyword or phrase that you can use to help describe the task. This can be used to keep track of the state or progress of a task, such as \"Waiting for Jim\" or \"Phase 1\". It could also be used to keep track of the next step that you need to take, like \"Call Jill\". Some people use the tag to classify the task. For example: \"reminder\", \"chore\" or \"meeting\".\n\nWhen you get here for the first time, you will need to type in your tags. After this, you can select your most recently used tags from a list.</string>
	<string name="Enter_Other_Tags">Enter other tags here, separated by commas:</string>
	<string name="Enter_Tags_Here">Enter your tags here, separated by commas:</string>
	<string name="Select_Tags">Select Tags</string>
	<string name="Select_Accounts">Select Accounts</string>
	<string name="Please_select_at_least_one">Please select at least one.</string>
	<string name="account_cannot_be_changed">The account cannot be changed for an existing task.</string>
	<string name="Yes">Yes</string>
	<string name="No">No</string>
	<string name="Save_changes">Save Changes?</string>
	<string name="Timer_will_start">Timer will start when the task is saved.</string>
	<string name="Timer_stopped">Timer stopped.</string>
	<string name="Please_enter_a_title">Please enter a title.</string>
	<string name="Start_must_be_before_end">The start date must be before the due date.</string>
	<string name="Reminder_must_be_before_due">The reminder date/time must be before the due date.</string>
	<string name="Unable_to_add_folder">Unable to add folder to the database.</string>
	<string name="Unable_to_add_context">Unable to add context to the database.</string>
	<string name="Unable_to_add_goal">Unable to add goal to the database.</string>
	<string name="Cannot_modify_task">Cannot modify task in the database.</string>
	<string name="Cannot_add_task">Cannot add task to the database.</string>
	<string name="Seven_day_rule">The reminder date must be within 7 days of the due date.</string>
	<string name="Start_Timer">Start Timer</string>
	<string name="Stop_Timer">Stop Timer</string>
	<string name="Add_Subtask">Add Subtask</string>
	<string name="Delete_Task">Delete Task</string>
	<string name="Settings">Settings</string>
	<string name="Search">Search</string>
	<string name="Sync">Sync</string>
	<string name="Sync_Now">Sync Now</string>
	<string name="Filter">Filter</string>
	<string name="Sort">Sort</string>
	<string name="Display_Options">Display Options</string>
	<string name="Save_This_View">Save This View</string>
	<string name="Status_">Status: </string>
	<string name="Start_Date_">Start Date: </string>
	<string name="Start_Date_Time_">Start Date/Time: </string>
	<string name="Due_Date_">Due Date: </string>
	<string name="Due_Date_Time_">Due Date/Time: </string>
	<string name="Reminder_">Reminder: </string>
	<string name="Repeat_">Repeat: </string>
	<string name="Repeat_From_">Repeat From: </string>
	<string name="Priority_">Priority: </string>
	<string name="Folder_">Folder: </string>
	<string name="Context_">Context: </string>
	<string name="Tags_">Tags: </string>
	<string name="Goal_">Goal: </string>
	<string name="Account_">Account: </string>
	<string name="Expected_Length_">Expected Length: </string>
	<string name="Actual_Length_">Actual Length: </string>
	<string name="Note_">Note: </string>
	<string name="Timer_is_Running">Timer is Running</string>
	<string name="Timer_already_running">Timer is already running.</string>
	<string name="Timer_was_not_running">The timer was not running.</string>
	<string name="licCheck1">Starting a license check.</string>
	<string name="licCheck2">Cannot bind to license service.  Most likely cause: the license app is not installed.</string>
	<string name="licCheck3">License app reports that UTL is licensed.</string>
	<string name="licCheck4">License app reports that UTL is unlicensed.  Failure number:</string>
	<string name="licCheck5">Marking UTL as not purchased.</string>
	<string name="licCheck6">Not marking UTL as not purchased yet.</string>
	<string name="licCheck7">License app returned an error.  Position:</string>
	<string name="licCheck8">License Receiver got malformed license data.</string>
	<string name="Task_no_longer_exists">Task no longer exists.</string>
	<string name="Completed_">Completed: </string>
	<string name="Continue">Continue</string>
	<string name="The_account_hash_been_set_up">The account has been set up.</string>
	<string name="Synchronization_will_run_in_background">The link has been set up, and your tasks are now being downloaded into your device. When browsing, you will see them gradually appear over the next several minutes.</string>
	<string name="Toodledo_account_has_been_set_up">The Toodledo account has been created.  In addition to your device, you can access your tasks and notes at toodledo.com.</string>
	<string name="Unable_to_create_td_account">Unable to create Toodledo account.</string>
	<string name="Unable_to_login_to_td">Unable to log into Toodledo.com.</string>
	<string name="Stop_Nagging">Stop Nagging</string>
	<string name="Snooze">Snooze</string>
	<string name="Dismiss">Dismiss</string>
	<string name="Complete">Complete</string>
	<string name="Previous_rule_must_also_match">Previous rule must also match</string>
	<string name="Find_tasks_whose">Show tasks whose</string>
	<string name="Modify_">Modify...</string>
	<string name="spacer"> </string>
	<string name="Quick_Search_Intro">What are you looking for?</string>
	<string name="Parent_Task_">Parent Task:</string>
	<string name="Trial_Expiry_Msg">Thanks for trying out Ultimate To-Do List.  Your free trial has expired.\n</string>
	<string name="Purchase_Now">Purchase Now</string>
	<string name="Recheck_License">Check Again For a License</string>
	<string name="What_to_Search">What to Search:</string>
	<string name="Completed_Tasks">Completed Tasks</string>
	<string name="Incomplete_Tasks">Incomplete Tasks</string>
    <string name="Location_">Location: </string>
	<string name="Trial_Expiry_Info">\nThe 2 week free trial begins from the date the app is first run on your device.  Uninstalling the app will not reset the trial.</string>
	<string name="Date_Of_First_Run_">\nDate the app was first run:</string>
	<string name="Contact_">Contact:</string>
	<string name="Add_To_Calendar">Show in Calendar:</string>
	<string name="Title_">Title:</string>
</resources>