<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:background='?attr/main_background_color'
>

<!-- Placeholder for Top Title Bar -->
<FrameLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/title_bar_placeholder"
/>

<ScrollView
  android:layout_width="fill_parent"
  android:layout_height="0dp"
  android:layout_weight="1"
>

<!-- This vertical linear layout holds everything -->
<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
>
	<!-- The table containing the details of the task -->
	<!-- IMPORTANT: If any rows are added or removed, a corresponding update needs to be made in
	     the onActivityCreated() method of ViewTaskFragment.java.  There is a list of view IDs
	     here who's layout may need to be adjusted. -->
	<TableLayout
		android:id="@+id/view_task_table"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:stretchColumns="1"
  	>
        <TableRow android:id="@+id/view_task_title_row">
            <TextView
                android:id="@+id/view_task_title1"
                android:text="@string/Title_"
                style='@style/TaskViewerField'
            />
            <TextView
                android:id="@+id/view_task_title2"
                android:text=" "
				style='@style/TaskViewerValue'
            />
        </TableRow>
  		<TableRow android:id="@+id/view_task_parent_row">
  			<TextView
  				android:id="@+id/view_task_parent1"
				android:text="@string/Parent_Task_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_parent2"
				android:text=" "
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_status_row">
  			<TextView
  				android:id="@+id/view_task_status1"
				android:text="@string/Status_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_status2"
				android:text="Active"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_separator1">
			<View
				android:id='@+id/view_task_field_separator1'
				style='@style/TaskViewerFieldSeparator'
				/>
			<View
				style='@style/TaskViewerValueSeparator'
				/>
		</TableRow>
  		<TableRow android:id="@+id/view_task_start_date_row">
  			<TextView
  				android:id="@+id/view_task_start_date1"
				android:text="@string/Start_Date_Time_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_start_date2"
				android:text="Tue 12/25/10 12:00 AM"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_due_date_row">
  			<TextView
  				android:id="@+id/view_task_due_date1"
				android:text="@string/Due_Date_Time_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_due_date2"
				android:text="Tue 12/25/10 12:00 AM"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_completion_date_row">
  			<TextView
  				android:id="@+id/view_task_completion_date1"
				android:text="@string/Completed_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_completion_date2"
				android:text="Tue 12/25/10 12:00 AM"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_reminder_row">
  			<TextView
  				android:id="@+id/view_task_reminder_date1"
				android:text="@string/Reminder_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_reminder_date2"
				android:text="Tue 12/25/10 12:00 AM"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_repeat_row">
  			<TextView
  				android:id="@+id/view_task_repeat1"
				android:text="@string/Repeat_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_repeat2"
				android:text="The 2nd Tue of Every Month"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_repeat_from_row">
  			<TextView
  				android:id="@+id/view_task_repeat_from1"
				android:text="@string/Repeat_From_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_repeat_from2"
				android:text="@string/Due_Date"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_calendar_row">
  			<TextView
  				android:id="@+id/view_task_calendar1"
				android:text="@string/Add_To_Calendar"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_calendar2"
				android:text="@string/No"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_separator2">
			<View
				android:id='@+id/view_task_field_separator2'
				style='@style/TaskViewerFieldSeparator'
				/>
			<View
				style='@style/TaskViewerValueSeparator'
				/>
		</TableRow>
  		<TableRow android:id="@+id/view_task_priority_row">
  			<TextView
  				android:id="@+id/view_task_priority1"
				android:text="@string/Priority_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_priority2"
				android:text="High"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_folder_row">
  			<TextView
  				android:id="@+id/view_task_folder1"
				android:text="@string/Folder_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_folder2"
				android:text="Work"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_context_row">
  			<TextView
  				android:id="@+id/view_task_context1"
				android:text="@string/Context_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_context2"
				android:text="Office"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_tags_row">
  			<TextView
  				android:id="@+id/view_task_tags1"
				android:text="@string/Tags_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_tags2"
				android:text="Tag1,Tag2,Tag3"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_goal_row">
  			<TextView
  				android:id="@+id/view_task_goal1"
				android:text="@string/Goal_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_goal2"
				android:text="Sample Goal"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_location_row">
  			<TextView
  				android:id="@+id/view_task_location1"
				android:text="@string/Location_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_location2"
				android:text="Sample Location"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_account_row">
  			<TextView
  				android:id="@+id/view_task_account1"
				android:text="@string/Account_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_account2"
				android:text="Jane's To-Do List"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_separator3">
			<View
				android:id='@+id/view_task_field_separator3'
				style='@style/TaskViewerFieldSeparator'
				/>
			<View
				style='@style/TaskViewerValueSeparator'
				/>
		</TableRow>
  		<TableRow android:id="@+id/view_task_expected_length_row">
  			<TextView
  				android:id="@+id/view_task_expected_length1"
				android:text="@string/Expected_Length_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_expected_length2"
				android:text="10 minutes"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_actual_length_row">
  			<TextView
  				android:id="@+id/view_task_actual_length1"
				android:text="@string/Actual_Length_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_actual_length2"
				android:text="10 minutes"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_separator4">
			<View
				android:id='@+id/view_task_field_separator4'
				style='@style/TaskViewerFieldSeparator'
				/>
			<View
				style='@style/TaskViewerValueSeparator'
				/>
		</TableRow>
  		<TableRow android:id="@+id/view_task_contact_row">
  			<TextView
  				android:id="@+id/view_task_contact1"
				android:text="@string/Contact_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_contact2"
				android:text="@string/None"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_separator5">
			<View
				android:id='@+id/view_task_field_separator5'
				style='@style/TaskViewerFieldSeparator'
				/>
			<View
				style='@style/TaskViewerValueSeparator'
				/>
		</TableRow>
  		<TableRow android:id="@+id/view_task_added_by_row">
  			<TextView
  				android:id="@+id/view_task_added_by"
				android:text="@string/Added_By_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_added_by2"
				android:text="@string/None"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_is_joint_row">
  			<TextView
  				android:id="@+id/view_task_is_joint"
				android:text="@string/Is_Joint_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_is_joint2"
				android:text="@string/None"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_owner_row">
  			<TextView
  				android:id="@+id/view_task_owner"
				android:text="@string/Owner_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_owner2"
				android:text="@string/None"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_shared_with_row">
  			<TextView
  				android:id="@+id/view_task_shared_with"
				android:text="@string/Shared_With_"
				style='@style/TaskViewerField'
			/>
  			<TextView
  				android:id="@+id/view_task_shared_with2"
				android:text="@string/None"
				style='@style/TaskViewerValue'
  			/>
  		</TableRow>
  		<TableRow android:id="@+id/view_task_separator6">
			<View
				android:id='@+id/view_task_field_separator6'
				style='@style/TaskViewerFieldSeparator'
			/>  			
			<View
				style='@style/TaskViewerValueSeparator'
			/>  			
  		</TableRow>
  	</TableLayout>
  	<TextView
  		android:id="@+id/view_task_note1"
  		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Note_"
		android:gravity="left"
		android:textColor="?attr/table_field_color"
		android:textStyle='bold'
		android:paddingLeft='3dp'
	/>
  	<TextView
  		android:id="@+id/view_task_note2"
  		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Sample Note"
		android:gravity="left"
		android:paddingLeft='3dp'
	/>
</LinearLayout>
</ScrollView>

<com.customsolutions.android.utl.BannerAd style='@style/BannerAd' />

<LinearLayout 
	android:id="@+id/view_task_bottom_buttons_container"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
	android:layout_marginBottom="4dp"
>
	<!-- Stop Nagging and Mark Complete Buttons -->
	<LinearLayout
		android:id="@+id/view_task_nag_buttons_container"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="horizontal"
  	>
		<Button
			android:id="@+id/view_task_stop_nagging_button"
			android:text="@string/Stop_Nagging"
			style='@style/TaskViewerButton'
		/>
		<Button
			android:id="@+id/view_task_snooze_nag_button"
			android:text="@string/Snooze"
			style='@style/TaskViewerButton'
		/>
		<Button
			android:id="@+id/view_task_mark_complete_button"
			android:text="@string/Complete"
			style='@style/TaskViewerButton'
		/>
  	</LinearLayout>

	<!-- Stop Nagging and Mark Complete Buttons -->
	<LinearLayout
		android:id="@+id/view_task_reminder_buttons_container"
		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:orientation="horizontal"
  	>
		<Button
			android:id="@+id/view_task_dismiss_button"
			android:text="@string/Dismiss"
			style='@style/TaskViewerButton'
		/>
		<Button
			android:id="@+id/view_task_snooze_button"
			android:text="@string/Snooze"
			style='@style/TaskViewerButton'
		/>
		<Button
			android:id="@+id/view_task_mark_complete_button2"
			android:text="@string/Complete"
			style='@style/TaskViewerButton'
			/>
  	</LinearLayout>
    
</LinearLayout>

<!-- Placeholder for Bottom Command Bar -->
<FrameLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:id="@+id/command_bar_placeholder"
/>

</LinearLayout>