<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
>
<LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:gravity="center_horizontal" 
  android:layout_gravity="center_horizontal"
>
	<TextView android:id="@+id/trial_expired_msg" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/Trial_Expiry_Msg" 
		android:gravity="center_horizontal" 
		android:textSize='?attr/utl_font_size_large'
		android:paddingTop='8dp'
	/>
  
    <Button android:id="@+id/trial_expired_purchase_button"
		android:text="@string/Purchase_Now"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
	/>
	
	<TextView android:id="@+id/spacer" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text=" " 
		android:gravity="center_horizontal" 
	/>
	
	<Button android:id="@+id/trial_expired_recheck_license_button"
		android:text="@string/Recheck_License"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" 
	/>
	
	<TextView android:id="@+id/trial_expiry_info" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/Trial_Expiry_Info" 
	/>

	<TextView android:id="@+id/trial_expiry_info2" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/Date_Of_First_Run_" 
	/>
</LinearLayout>
</ScrollView>