<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
>  
 	<TextView 
 	    android:id="@+id/enter_account_name"
 		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/getAccountName"
		android:layout_marginTop='16dp'
	/>
		
	<EditText 
	    android:id="@+id/new_account_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="text|textCapSentences"
	/>
		
	<TextView 
	    android:id="@+id/account_name_examples"
 		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/getAccountName2"
		android:layout_marginTop='8dp'
	/>
		
	<Button 
	    android:id="@+id/new_account_done_button"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:text="@string/done"
		android:layout_marginTop='8dp'
		android:layout_gravity='center'
		android:textSize="?attr/utl_font_size_normal"
	/>
		
</LinearLayout>
