<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
>
	<CheckedTextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:id="@+id/edit_mult_strings_vr_is_and_checkbox"
	    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
	    android:gravity="center_vertical"
	    android:text="@string/Previous_rule_must_also_match"
		android:paddingLeft='6dp'
  		android:paddingRight='3dp'
  		android:minHeight='48dp'
	/>
	
	<!-- Separator -->  	
	<View android:layout_height="3dp"
		android:layout_width="fill_parent"
		android:background="?attr/list_divider_color"
		android:id="@+id/edit_mult_strings_vr_separator"
	/>

	<!-- The ListView, containing the items (not used for contact)-->
	<ListView 
    	android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
    	android:choiceMode="multipleChoice"
	   	android:divider="?attr/list_divider_color"
	   	android:dividerHeight="1px"
	   	android:layout_weight='1'
    />
	
	<!-- These 2 are used for a contacts rule only: -->
	
	<!-- Description of rule settings -->
	<TextView
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/edit_mult_strings_vr_text"
	    android:text="@string/Find_tasks_whose"
	    android:gravity='center_vertical'
	    android:paddingLeft='6dp'
	    android:minHeight='48dp'
	/>
	
	<!-- Button to edit settings -->
	<Button
 		android:id="@+id/edit_mult_strings_vr_edit_button"
 		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/Modify_"
		android:gravity="center"
		android:layout_marginLeft='3dp'
		android:textSize="?attr/utl_font_size_normal"
	/>	
	
	<!-- Separator -->
	<View
		android:id="@+id/edit_mult_strings_contact_spacer"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
	/>
	
	<!-- xxxxxxxxxxxxx -->
	
	<!-- This is used by a tags rule, to enter tags not listed: -->
	<LinearLayout
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	  	android:orientation="vertical"
	  	android:id='@+id/edit_mult_strings_vr_other_tags'
	>
		<!-- Separator -->
		<View android:layout_height="3dp"
			android:layout_width="fill_parent"
			android:background="?attr/list_divider_color"
			android:id="@+id/tag_separator"
		/>
		
		<!-- Entry of tags not on list -->
		<TextView
		    android:id='@+id/edit_mult_strings_vr_enter_statement'
	 		android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:text="@string/Enter_Tags_Here"
			android:paddingLeft='6dp'
		/>
		
		<EditText 
			android:id="@+id/edit_mult_strings_vr_manual_entry"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="text"
			android:paddingRight='6dp'
		/>
	</LinearLayout>

	<com.customsolutions.android.utl.BannerAd style='@style/BannerAd' />
</LinearLayout>